--- a/html/cliente/appointment.html
+++ b/html/cliente/appointment.html
@@ -98,11 +98,13 @@
                             </div>
                         </div>
                         <div class="item row">
-                            <div class="col-auto">
+                            <div class="item-component">
+                                <div class="col-auto">
                                 <label for="inputPassword6" class="col-form-label">Danos una breve descripción de tu consulta</label>
-                            </div>
-                            <div class="col-auto">
-                                <input type="text" id="inputPassword6" class="form-control" placeholder="Opcional">
+                                </div>
+                                <div class="col-auto">
+                                    <input type="text" id="inputPassword6" class="obs-input form-control" placeholder="Opcional">
+                                </div>
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Agendar</button>
