--- a/html/veterinario/medical-history.html
+++ b/html/veterinario/medical-history.html
@@ -21,118 +21,96 @@
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <div class="row">
-            <span class="main-title">Esta es tu agenda de hoy</span>
-            <div class="form">
-                <div class="item row g-3">
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Fecha</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
+        <div class="main-container">
+            <div class="history-form">
+                <span class="main-title my-3">Historia Clínica</span>
+                <div class="item row">
+                    <div class="col">
+                        <label for="inputDate" class="col-form-label">Fecha</label>
                     </div>
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Hora</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
+                    <div class="col">
+                        <input type="text" id="inputDate" class="form-control">
                     </div>
+                    <div class="col">
+                        <label for="inputHour" class="col-form-label">Hora</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputHour" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label for="inputType" class="col-form-label">Tipo de consulta</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputType" class="form-control">
+                    </div>
+                </div>
+                <div class="item row">
+                    <div class="col">
+                        <label for="inputOwner" class="col-form-label">Responsable</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputOwner" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label for="inputPet" class="col-form-label">Nombre mascota</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputPet" class="form-control">
+                    </div>
+                </div>
+                <div class="item row">
+                    <div class="col">
+                        <label for="inputBreed" class="col-form-label">Raza</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputBreed" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label for="inputAge" class="col-form-label">Edad</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputAge" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label for="inputWeight" class="col-form-label">Peso</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputWeight" class="form-control">
+                    </div>
+                </div>
+                <div class="item row">
+                    <div class="col">
+                        <label for="inputFC" class="col-form-label">FC</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputFC" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label for="inputFR" class="col-form-label">FR</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputFR" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label for="inputTemperature" class="col-form-label">Temperatura</label>
+                    </div>
+                    <div class="col">
+                        <input type="text" id="inputTemperature" class="form-control">
+                    </div>
+                </div>
+                <div class="item row">
                     <div class="item-component">
                         <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Tipo de consulta</label>
+                            <label for="inputObs" class="obs-title col-form-label">Recomendaciones</label>
                         </div>
                         <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
+                            <input type="text" id="inputObs" class="obs-input form-control">
                         </div>
                     </div>
                 </div>
-                <div class="item row g-3">
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Responsable</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Nombre mascota</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                </div>
-                <div class="item row g-3">
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Raza</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Edad</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Peso</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                </div>
-                <div class="item row g-3">
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">FC</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">FR</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Temperatura</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                </div>
-                <div class="item row g-3">
-                    <div class="item-component">
-                        <div class="col">
-                            <label for="inputPassword6" class="col-form-label">Recomendaciones</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="inputPassword6" class="form-control">
-                        </div>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Guardar</button>
+                <button type="submit" class="btn btn-primary mb-3">Guardar</button>
             </div>
-        <button type="submit" class="btn btn-primary col-auto">Cerrar sesión</button>
+            <button type="submit" class="btn-logout btn btn-primary">Cerrar sesión</button>
         </div>
         <footer>
             <h6>Misión TIC Todos los derechos reservados ©</h6>
