--- a/html/cliente/register.html
+++ b/html/cliente/register.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/cliente.css">
-    <title> Veterinaria Huellitas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+    <script src="/scripts/api/Entity.js"></script>
+    <script src="/scripts/api/Dueno.js"></script>
+    <script src="/scripts/views/duenos.js"></script>
+    <title> Veterinaria Huellitas</title>
+    
 </head>
 <body>
     <div class="container-fluid">
@@ -21,65 +25,67 @@
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <div class="form">
-            <span class="form-title">Registro</span>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputName" class="col-form-label">Nombre</label>
-                </div>
-                <div class="col">
-                    <input type="text" id="inputName" class="form-control">
-                </div>
+        <form id="dueno-insert">
+            <div class="form">
+                <span class="form-title">Registro</span>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputName" class="col-form-label">Nombre</label>
+                        </div>
+                        <div class="col">
+                            <input type="text" name="nombre">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputID" class="col-form-label">Cédula</label>
+                        </div>
+                        <div class="col">
+                            <input type="number" name="cedula">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputTel" class="col-form-label">Teléfono</label>
+                        </div>
+                        <div class="col">
+                            <input type="tel" name="telefono">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputEmail" class="col-form-label">E-mail</label>
+                        </div>
+                        <div class="col">
+                            <input type="email" name="email">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputUser" class="col-form-label">Usuario</label>
+                        </div>
+                        <div class="col">
+                            <input type="text" name="usuario">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputPassword" class="col-form-label">Contraseña</label>
+                        </div>
+                        <div class="col">
+                            <input type="password" name="password">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
+                        </div>
+                        <div class="col">
+                            <input type="password" id="inputRepeatPassword" class="form-control">
+                        </div>
             </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputID" class="col-form-label">Cédula</label>
-                </div>
-                <div class="col">
-                    <input type="number" id="inputID" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputTel" class="col-form-label">Teléfono</label>
-                </div>
-                <div class="col">
-                    <input type="tel" id="inputTel" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputEmail" class="col-form-label">E-mail</label>
-                </div>
-                <div class="col">
-                    <input type="email" id="inputEmail" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputUser" class="col-form-label">Usuario</label>
-                </div>
-                <div class="col">
-                    <input type="text" id="inputUser" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputPassword" class="col-form-label">Contraseña</label>
-                </div>
-                <div class="col">
-                    <input type="password" id="inputPassword" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
-                </div>
-                <div class="col">
-                    <input type="password" id="inputRepeatPassword" class="form-control">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <button type="submit">Ingresar</button>
+        </form>
             <span class="register-link">¿Ya tienes cuenta?</span>
             <a href="/html/cliente/login.html">Inicia sesión</a>
         </div>
