--- a/html/cliente/register.html
+++ b/html/cliente/register.html
@@ -25,70 +25,71 @@
                 <a class="btn btn-primary" href="/index.html" role="button">Regresar</a>
             </div>
         </div>
-        <form id="dueno-insert">
             <div class="form">
-                <span class="form-title">Registro</span>
-                    <div class="item row g-3">
-                        <div class="col">
-                            <label for="inputName" class="col-form-label">Nombre</label>
+                <form id="dueno-insert">
+                    <span class="form-title">Registro</span>
+                        <div class="item row g-3">
+                            <div class="col">
+                                <label for="inputName" class="col-form-label">Nombre</label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="nombre" class="form-control">
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="text" name="nombre">
+                        <div class="item row g-3">
+                            <div class="col">
+                                <label for="inputID" class="col-form-label">Cédula</label>
+                            </div>
+                            <div class="col">
+                                <input type="number" name="cedula" class="form-control">
+                            </div>
                         </div>
-                    </div>
-                    <div class="item row g-3">
-                        <div class="col">
-                            <label for="inputID" class="col-form-label">Cédula</label>
+                        <div class="item row g-3">
+                            <div class="col">
+                                <label for="inputTel" class="col-form-label">Teléfono</label>
+                            </div>
+                            <div class="col">
+                                <input type="tel" name="telefono" class="form-control">
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="number" name="cedula">
+                        <div class="item row g-3">
+                            <div class="col">
+                                <label for="inputEmail" class="col-form-label">E-mail</label>
+                            </div>
+                            <div class="col">
+                                <input type="email" name="email" class="form-control">
+                            </div>
                         </div>
-                    </div>
-                    <div class="item row g-3">
-                        <div class="col">
-                            <label for="inputTel" class="col-form-label">Teléfono</label>
+                        <div class="item row g-3">
+                            <div class="col">
+                                <label for="inputUser" class="col-form-label">Usuario</label>
+                            </div>
+                            <div class="col">
+                                <input type="text" name="usuario" class="form-control">
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="tel" name="telefono">
+                        <div class="item row g-3">
+                            <div class="col">
+                                <label for="inputPassword" class="col-form-label">Contraseña</label>
+                            </div>
+                            <div class="col">
+                                <input type="password" name="password" class="form-control">
+                            </div>
                         </div>
-                    </div>
-                    <div class="item row g-3">
-                        <div class="col">
-                            <label for="inputEmail" class="col-form-label">E-mail</label>
+                        <div class="item row g-3">
+                            <div class="col">
+                                <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
+                            </div>
+                            <div class="col">
+                                <input type="password" id="inputRepeatPassword" class="form-control">
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="email" name="email">
-                        </div>
-                    </div>
-                    <div class="item row g-3">
-                        <div class="col">
-                            <label for="inputUser" class="col-form-label">Usuario</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" name="usuario">
-                        </div>
-                    </div>
-                    <div class="item row g-3">
-                        <div class="col">
-                            <label for="inputPassword" class="col-form-label">Contraseña</label>
-                        </div>
-                        <div class="col">
-                            <input type="password" name="password">
-                        </div>
-                    </div>
-                    <div class="item row g-3">
-                        <div class="col">
-                            <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
-                        </div>
-                        <div class="col">
-                            <input type="password" id="inputRepeatPassword" class="form-control">
-                        </div>
+                        <button type="submit" class="btn btn-primary">Ingresar</button>
+                </form>
+                <span class="register-link">¿Ya tienes cuenta?</span>
+                <a href="/html/cliente/login.html">Inicia sesión</a>
             </div>
-            <button type="submit">Ingresar</button>
         </form>
-            <span class="register-link">¿Ya tienes cuenta?</span>
-            <a href="/html/cliente/login.html">Inicia sesión</a>
-        </div>
         <footer>
             <h6>Misión TIC Todos los derechos reservados ©</h6>
         </footer>
