--- a/html/cliente/pet-register.html
+++ b/html/cliente/pet-register.html
@@ -45,13 +45,13 @@
                 <div class="col-10">
                     <div class="form">
                         <span class="main-title">Registra tu mascota</span>
-                        <form id = "">
+                        <form id = "mascota-insert">
                             <div class="item row">
                                 <div class="col-auto">
                                     <label for="inputPassword6" class="col-form-label">Nombre</label>
                                 </div>
                                 <div class="col-auto">
-                                    <input type="text" id="inputPassword6" class="form-control">
+                                    <input type="text" name="nombre" class="form-control">
                                 </div>
                             </div>
                             <div class="item row">
@@ -59,7 +59,7 @@
                                     <label for="inputPassword6" class="col-form-label">Especie</label>
                                 </div>
                                 <div class="col-auto">
-                                    <select class="form-select" aria-label="Default select example">
+                                    <select class="form-select" name="especie" aria-label="Default select example">
                                         <option selected>Seleccionar</option>
                                         <option value="1">Perro</option>
                                         <option value="2">Gato</option>
@@ -72,7 +72,7 @@
                                     <label for="inputPassword6" class="col-form-label">Raza</label>
                                 </div>
                                 <div class="col-auto">
-                                    <input type="text" id="inputPassword6" class="form-control" placeholder="Opcional">
+                                    <input type="text" name="raza" class="form-control" placeholder="Opcional">
                                 </div>
                             </div>
                             <div class="item row">
@@ -80,7 +80,7 @@
                                     <label for="inputPassword6" class="col-form-label">Sexo</label>
                                 </div>
                                 <div class="col-auto">
-                                    <input type="text" id="inputPassword6" class="form-control">
+                                    <input type="text" name="sexo" class="form-control">
                                 </div>
                             </div>
                             <div class="item row">
@@ -88,7 +88,7 @@
                                     <label for="inputPassword6" class="col-form-label">Edad</label>
                                 </div>
                                 <div class="col-auto">
-                                    <input type="number" id="inputPassword6" class="form-control" placeholder="Opcional">
+                                    <input type="number" name="edad" class="form-control" placeholder="Opcional">
                                 </div>
                             </div>
                             <div class="item row">
