--- a/html/veterinario/register.html
+++ b/html/veterinario/register.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+    <script src="/scripts/api/Entity.js"></script>
+    <script src="/scripts/api/Vet.js"></script>
+    <script src="/scripts/views/vets.js"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -24,70 +27,72 @@
         <div class="form">
             <span class="form-title">Registro</span>
             <div class="item row g-3">
-                <div class="col">
-                    <label for="inputName" class="col-form-label">Nombre</label>
-                </div>
-                <div class="col">
-                    <input type="text" id="inputName" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputID" class="col-form-label">Cédula</label>
-                </div>
-                <div class="col">
-                    <input type="number" id="inputID" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputTP" class="col-form-label">Matrícula profesional</label>
-                </div>
-                <div class="col">
-                    <input type="number" id="inputTP" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputTel" class="col-form-label">Teléfono</label>
-                </div>
-                <div class="col">
-                    <input type="tel" id="inputTel" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputEmail" class="col-form-label">E-mail</label>
-                </div>
-                <div class="col">
-                    <input type="email" id="inputEmail" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputUser" class="col-form-label">Usuario</label>
-                </div>
-                <div class="col">
-                    <input type="text" id="inputUser" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputPassword" class="col-form-label">Contraseña</label>
-                </div>
-                <div class="col">
-                    <input type="password" id="inputPassword" class="form-control">
-                </div>
-            </div>
-            <div class="item row g-3">
-                <div class="col">
-                    <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
-                </div>
-                <div class="col">
-                    <input type="password" id="inputRepeatPassword" class="form-control">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+                <form id="vet-insert">
+                        <div class="col">
+                            <label for="inputName" class="col-form-label">Nombre</label>
+                        </div>
+                        <div class="col">
+                            <input type="text" name="nombre" class="form-control">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputID" class="col-form-label">Cédula</label>
+                        </div>
+                        <div class="col">
+                            <input type="number" name="cedula" class="form-control">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputTP" class="col-form-label">Matrícula profesional</label>
+                        </div>
+                        <div class="col">
+                            <input type="number" name="matricula" class="form-control">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputTel" class="col-form-label">Teléfono</label>
+                        </div>
+                        <div class="col">
+                            <input type="tel" name="telefono" class="form-control">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputEmail" class="col-form-label">E-mail</label>
+                        </div>
+                        <div class="col">
+                            <input type="email" name="email" class="form-control">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputUser" class="col-form-label">Usuario</label>
+                        </div>
+                        <div class="col">
+                            <input type="text" name="usuario" class="form-control">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputPassword" class="col-form-label">Contraseña</label>
+                        </div>
+                        <div class="col">
+                            <input type="password" name="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="item row g-3">
+                        <div class="col">
+                            <label for="inputRepeatPassword" class="col-form-label">Confirmar contraseña</label>
+                        </div>
+                        <div class="col">
+                            <input type="password" id="inputRepeatPassword" class="form-control">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                </form>
             <span class="register-link">¿Ya tienes cuenta?</span>
             <a class="link" href="/html/veterinario/login.html">Inicia sesión</a>
         </div>
